Keyframe on renderlayer enable toggle does not evaluate during animation render #39940

Closed
opened 2014-04-28 19:23:03 +02:00 by Warren Bahler · 13 comments

System Information
Win 7 and Ubuntu 13.4

Blender Version
Broken: 2.7 f93bc76
Worked: 2.69

using cycles

If I keyframe the "enable/disable render layer" toggle, It will work correctly during timeline playback. But if I render an animation sequence, the keyframed toggle will not evaluate.

Exact steps for others to reproduce the error

  1. Open the attached file. Scrub the timeline and note that the render layer "monkey" is keyframed to turn on on frame 3.
  2. Press CTRL F12 to render animation, note that the keyframe does not evaluate and blender only renders the "Cube" layer.

Also,during rendering, if you switch to another properties editor tab, and then back to the renderlayers after frame three, you will see that the tick box refreshes correctly, but still does not actively render.

**System Information** Win 7 and Ubuntu 13.4 **Blender Version** Broken: 2.7 f93bc76 Worked: 2.69 using cycles If I keyframe the "enable/disable render layer" toggle, It will work correctly during timeline playback. But if I render an animation sequence, the keyframed toggle will not evaluate. **Exact steps for others to reproduce the error** 1. Open the attached file. Scrub the timeline and note that the render layer "monkey" is keyframed to turn on on frame 3. 2. Press CTRL F12 to render animation, note that the keyframe does not evaluate and blender only renders the "Cube" layer. Also,during rendering, if you switch to another properties editor tab, and then back to the renderlayers after frame three, you will see that the tick box refreshes correctly, but still does not actively render.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WarrenBahler

Added subscriber: @WarrenBahler
Author

attached file didn't work so here it is: RndrLyrTest.blend

attached file didn't work so here it is: [RndrLyrTest.blend](https://archive.blender.org/developer/F86309/RndrLyrTest.blend)

Added subscriber: @willi-2

Added subscriber: @willi-2

Have a look here: #39828

Animation of render layer is not supported (anymore).

Have a look here: #39828 Animation of render layer is not supported (anymore).
Author

@willi-2 - actually that's a different property, I'm trying to animate the actual render layer toggle on and off - which worked in 2.69.

@willi-2 - actually that's a different property, I'm trying to animate the actual render layer toggle on and off - which worked in 2.69.
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

I think the problem here is that render layers are copied into the renderer state data at the start of the render job:
https://developer.blender.org/diffusion/B/browse/master/source/blender/render/intern/source/pipeline.c$516

This means that, even though the anim data is correctly evaluated and updates the render layer flags in the scene render data, this has no effect on the currently running render job's layer flags.

In general this means that any animation on render layer data is effectively not supported. I can think of 2 possible "solutions":

  • Rebuild the render layers list of the render job for each new frame
  • Accept that render layer flags (and possibly other settings) cannot be animated and enforce that in the API (not so nice of course, but may be cleaner design)
I think the problem here is that render layers are copied into the renderer state data at the start of the render job: https://developer.blender.org/diffusion/B/browse/master/source/blender/render/intern/source/pipeline.c$516 This means that, even though the anim data is correctly evaluated and updates the render layer flags in the scene render data, this has no effect on the currently running render job's layer flags. In general this means that any animation on render layer data is effectively not supported. I can think of 2 possible "solutions": - Rebuild the render layers list of the render job for each new frame - Accept that render layer flags (and possibly other settings) cannot be animated and enforce that in the API (not so nice of course, but may be cleaner design)
Brecht Van Lommel was assigned by Lukas Tönne 2014-04-29 12:24:35 +02:00

This issue was referenced by blender/blender-addons-contrib@4ff3ebf45c

This issue was referenced by blender/blender-addons-contrib@4ff3ebf45c8b7fe6911fb40d43384dc04d7a132b

This issue was referenced by 4ff3ebf45c

This issue was referenced by 4ff3ebf45c8b7fe6911fb40d43384dc04d7a132b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4ff3ebf45c.

Closed by commit 4ff3ebf45c.
Author

Thanks to all, its a great feature to have!

Thanks to all, its a great feature to have!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39940
No description provided.