Fix T39940: animation of render layer on/off toggle not working during render.